* add CMake option HESTIA_BUILD_TESTS (default off) * add subdirectory test and enable_testign if HESTIA_BUILD_TESTS is set   to ON * print value of HESTIA_BUILD_TESTS during CMake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,26 @@ project(
     LANGUAGES C CXX 
 )
 
+#
+# Options for sections of Hestia project
+#
+option(
+    HESTIA_BUILD_TESTS
+    "Build Hestia tests. Depends on Catch2."
+    OFF
+)
+
+#
+# Include subdirectories
+#
+
 add_subdirectory(src)
+
+if (HESTIA_BUILD_TESTS)
+    add_subdirectory(test)
+    enable_testing()
+endif(HESTIA_BUILD_TESTS)
 
 message(STATUS "Build Options:")
 message(STATUS "    CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
+message(STATUS "    HESTIA_BUILD_TESTS = ${HESTIA_BUILD_TESTS}")
