Put and Get Unit Tests
Change log:
* move dummy kv_store and object_store to test directory
* remove iostream includes
* treat src directory as a system include directory
* add hsm_uint constructor with higher and lower bit parameters
* add hsm_uint comparison operator
* fix hsm_obj allocation
* test put and get with a random string of data
* test offset and length parameters of put and get

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ option(
 #
 
 add_subdirectory(src)
+include_directories(SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 if (HESTIA_BUILD_TESTS)
     add_subdirectory(test)
