--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,15 +6,14 @@ include(Catch)
 #
 # Set test files to be added to the test executable
 #
-#set(
-#    tests
-#
-#    test1.cc
-#    test2.cc
-#)
+set(
+    tests
+
+    put_get.cc
+)
 
 set(sources catch_main.cc ${tests})
 
 add_executable(all_tests ${sources})
-target_link_libraries(all_tests PRIVATE Catch2::Catch2)
+target_link_libraries(all_tests PRIVATE hestia_lib Catch2::Catch2)
 catch_discover_tests(all_tests)
