--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,9 +6,12 @@ add_library(
 
     put.cc
     get.cc
+    set_attrs.cc
 )
 
 target_compile_features(hestia_lib PUBLIC cxx_std_17)
+
+target_link_libraries(hestia_lib PRIVATE nlohmann_json::nlohmann_json)
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
     include(../cmake/development_flags.cmake)
