--- a/test/kv_store/CMakeLists.txt
+++ b/test/kv_store/CMakeLists.txt
@@ -3,4 +3,4 @@ add_library(kv_disk
 )
 
 target_compile_features(kv_disk PUBLIC cxx_std_17)
-
+target_link_libraries(kv_disk PRIVATE nlohmann_json::nlohmann_json)
