Add List Public API
Change log:
* add list API definition
* remove unnecessary headers in get.cc
* add list declaration to kv_store interface
* add list functionality to KV_store dummy implementation
* simplify get_meta_data in KV_store dummy implementation
* add private method to get filename from oid to dummy KV_store
* add list API implementation
* modify list to return number of objects found
* use std::vector for listing object IDs
* add unit test for list

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,7 +111,7 @@ Unit_test:
     CMAKE_BUILD_TYPE: Release 
     HESTIA_BUILD_TESTS: "ON"
   artifacts:
-    name: debug 
+    name: release 
     paths:
       - "${CMAKE_BUILD_DIR}"
   dependencies:
