Use nlohmann_json for handling metadata
Change log:
* replace hsm_obj std::unordered_map to nlohmann::json for metadata
* use nlohmann_json to stream metadata
* metadata written to file in json format
* change metadata extension to avoid conflict with markdown files
* remove string requirement for metadata values
* add method to dummy object store to generate filename

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library(
 
 target_compile_features(hestia_lib PUBLIC cxx_std_17)
 
-target_link_libraries(hestia_lib PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(hestia_lib PUBLIC nlohmann_json::nlohmann_json)
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
     include(../cmake/development_flags.cmake)
