--- a/test/object_store/CMakeLists.txt
+++ b/test/object_store/CMakeLists.txt
@@ -3,4 +3,4 @@ add_library(obj_disk
 )
 
 target_compile_features(obj_disk PUBLIC cxx_std_17)
-
+target_link_libraries(obj_disk PRIVATE nlohmann_json::nlohmann_json)
