Added trigger migration feature, including move, copy and release
Change log:

    * Added set_attrs functionality to trigger migration and dummy object store copy
    * Added copy functionality, untested, because the code kept breaking
    * Changed order of copy.cc to have source first and target second in line with the object store copy and common sense
    * Added feature to track copy in key value store, currently only supports an original and one copy so needs expansion
    * Fixed the metadata format to hopefully fix the unit tests
    * Added move and release functionality
    * Fixed metadata for release

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,9 @@ add_library(
     list_attrs.cc
     remove.cc
     list.cc
+    copy.cc
+    move.cc
+    release.cc
 )
 
 target_compile_features(hestia_lib PUBLIC cxx_std_17)
