First (untested) implementation of get_tiers_info

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(
     copy.cc
     move.cc
     release.cc
+    get_tiers_info.cc
 )
 
 target_compile_features(hestia_lib PUBLIC cxx_std_17)
