Applies GRH patch Change Log:     *Applied GRH patch and added conditionals to allow compilation on Mac     *Fixed mistake in src/CMakeLists.txt     *Fixed c++11 error in main

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,8 @@ add_subdirectory(../test/data_placement_engine ${CMAKE_CURRENT_BINARY_DIR}/data_
 add_library(
     hestia_lib
 
+    SHARED 
+
     put.cc
     get.cc
     set_attrs.cc
@@ -21,7 +23,11 @@ add_library(
 
 target_compile_features(hestia_lib PUBLIC cxx_std_17)
 
-target_link_libraries(hestia_lib PUBLIC nlohmann_json::nlohmann_json)
+if(APPLE)
+    target_link_libraries(hestia_lib PUBLIC nlohmann_json::nlohmann_json)
+else()
+    target_link_libraries(hestia_lib PUBLIC nlohmann_json::nlohmann_json stdc++fs)
+endif()
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
     include(../cmake/development_flags.cmake)
@@ -37,3 +43,16 @@ add_executable(
 )
 
 target_link_libraries(hestia hestia_lib)
+
+set(HESTIA_PUBLIC_HEADERS
+    "hestia.h"
+    "types.h"
+    )
+
+
+set_target_properties(hestia_lib PROPERTIES
+                      PUBLIC_HEADER "${HESTIA_PUBLIC_HEADERS}"
+                      POSITION_INDEPENDENT_CODE ON)
+install(TARGETS hestia_lib
+        LIBRARY DESTINATION lib64
+        PUBLIC_HEADER DESTINATION include)
