--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.24)
 
 project(
     hestia
@@ -20,6 +20,13 @@ option(
     "Build Hestia Documentation. Depends on Doxygen"
     OFF
 )
+
+#set(CMAKE_MODULE_PATH 
+#    ${CMAKE_MODULE_PATH}
+#    ${CMAKE_CURRENT_SOURCE_DIR}/cmake
+#    )
+
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 #
 # External dependencies
