Add basic CLI for put and get

--- a/src/data_placement_engine/CMakeLists.txt
+++ b/src/data_placement_engine/CMakeLists.txt
@@ -8,6 +8,7 @@ add_module(
         DataPlacementEngineRegistry.h
         BasicDataPlacementEngine.h
     SOURCES
+        DataPlacementEngineRegistry.cc
         BasicDataPlacementEngine.cc
     DEPENDENCIES
         hestia::hestia
